source/blender/nodes/shader/nodes/node_shader_sepcombHSV.c
@@ -46,8 +46,11 @@ static bNodeSocketTemplate sh_node_sephsv_out[] = {
 
 static void node_shader_exec_sephsv(void *UNUSED(data), int UNUSED(thread), bNode *UNUSED(node), bNodeExecData *UNUSED(execdata), bNodeStack **in, bNodeStack **out)
 {
-	rgb_to_hsv(in[0]->vec[0], in[0]->vec[1], in[0]->vec[2],
-		   &out[0]->vec[0], &out[1]->vec[0], &out[2]->vec[0]);
+	float col[3];
+	nodestack_get_vec(col, SOCK_VECTOR, in[0]);
+	
+	rgb_to_hsv(col[0], col[1], col[2],
+	           &out[0]->vec[0], &out[1]->vec[0], &out[2]->vec[0]);
 }
 
 static int gpu_shader_sephsv(GPUMaterial *mat, bNode *UNUSED(node), bNodeExecData *UNUSED(execdata), GPUNodeStack *in, GPUNodeStack *out)
@@ -83,8 +86,12 @@ static bNodeSocketTemplate sh_node_combhsv_out[] = {
 
 static void node_shader_exec_combhsv(void *UNUSED(data), int UNUSED(thread), bNode *UNUSED(node), bNodeExecData *UNUSED(execdata), bNodeStack **in, bNodeStack **out)
 {
-	hsv_to_rgb(in[0]->vec[0], in[1]->vec[0], in[2]->vec[0],
-		   &out[0]->vec[0], &out[0]->vec[1], &out[0]->vec[2]);
+	float h, s, v;
+	nodestack_get_vec(&h, SOCK_FLOAT, in[0]);
+	nodestack_get_vec(&s, SOCK_FLOAT, in[1]);
+	nodestack_get_vec(&v, SOCK_FLOAT, in[2]);
+	
+	hsv_to_rgb(h, s, v, &out[0]->vec[0], &out[0]->vec[1], &out[0]->vec[2]);
 }
 
 static int gpu_shader_combhsv(GPUMaterial *mat, bNode *UNUSED(node), bNodeExecData *UNUSED(execdata), GPUNodeStack *in, GPUNodeStack *out)
